--- a/test.html
+++ b/test.html
@@ -17,7 +17,7 @@
                 <a href="#home" class="nav-home">Home</a>
                 <a href="#team" class="nav-home">Team</a>
                 <a href="#pricing" class="nav-home">Pricing</a>
-                <a href="#blog" class="nav-home">Blog</a>
+                <a href=" https://dewanshyadav.github.io/RandomBlogs/" class="nav-home">Blog</a>
                 <a href="#about" class="nav-home">About</a>
             </nav>
 
