--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
             </a>
             <nav class="nav">
                 <a href="#home" class="nav-home">Home</a>
-                <a href="#team" class="nav-home">Team</a>
-                <a href="#pricing" class="nav-home">Pricing</a>
+                <a href="https://dewanshyadav.github.io/NSUTstudy-Instructors/" class="nav-home">Team</a>
+                <a href="https://dewanshyadav.github.io/NSUTstudy-courses/" class="nav-home">Pricing</a>
                 <a href=" https://dewanshyadav.github.io/RandomBlogs/" class="nav-home">Blog</a>
-                <a href="#about" class="nav-home">About</a>
+                <a href="https://dewanshyadav.github.io/portfolio/" class="nav-home">About</a>
             </nav>
 
-            <a href="#contact" class="Contact-button">
+            <a href="https://www.linkedin.com/in/dewansh-yadav-abb242229" class="Contact-button">
                 <span class="button-description">Contact Us</span>
             </a>
 
@@ -284,7 +284,7 @@
                     <a class="social-link" href="#">
                         <img src="insta.png" class="social-icon">
                     </a> 
-                    <a class="social-link" href="#">
+                    <a class="social-link" href="https://www.linkedin.com/in/dewansh-yadav-abb242229">
                         <img src="linkedin.svg" class="social-icon">
                     </a>
                     <a class="social-link" href="#">
@@ -305,13 +305,13 @@
                     </div>
                     <ul class="footer-links-list">
                         <li>
-                            <a href="#overview" class="footer-link">Overview</a>
+                            <a href="#" class="footer-link">Overview</a>
                         </li>
                         <li>
                             <a href="#solutions" class="footer-link">Solutions</a>
                         </li>
                         <li>
-                            <a href="#pricing" class="footer-link">Pricing</a>
+                            <a href="https://dewanshyadav.github.io/NSUTstudy-courses/" class="footer-link">Pricing</a>
                         </li>
                         <li>
                             <a href="#customers" class="footer-link">Customers</a>
@@ -324,19 +324,19 @@
                     </div>
                     <ul class="footer-links-list">
                         <li>
-                            <a href="#about" class="footer-link">About</a>
+                            <a href="https://dewanshyadav.github.io/portfolio/" class="footer-link">About</a>
                         </li>
                         <li>
-                            <a href="#investors" class="footer-link">Investors Relations</a>
+                            <a href="https://dewanshyadav.github.io/portfolio/" class="footer-link">Investors Relations</a>
                         </li>
                         <li>
                             <a href="#job" class="footer-link">Jobs</a>
                         </li>
                         <li>
-                            <a href="#press" class="footer-link">Press</a>
+                            <a href="https://dewanshyadav.github.io/NSUTstudy-Instructors/" class="footer-link">Team</a>
                         </li>
                         <li>
-                            <a href="#blog" class="footer-link">Blog</a>
+                            <a href="https://dewanshyadav.github.io/RandomBlogs/" class="footer-link">Blog</a>
                         </li>
                     </ul>
                 </div>
@@ -346,13 +346,13 @@
                     </div>
                     <ul class="footer-links-list">
                         <li>
-                            <a href="#contact" class="footer-link">Contact</a>
+                            <a href="https://www.linkedin.com/in/dewansh-yadav-abb242229" class="footer-link">Contact</a>
                         </li>
                         <li>
                             <a href="#documentation" class="footer-link">Documentation</a>
                         </li>
                         <li>
-                            <a href="#chat" class="footer-link">Chat</a>
+                            <a href="https://www.linkedin.com/in/dewansh-yadav-abb242229" class="footer-link">Chat</a>
                         </li>
                         <li>
                             <a href="#FAQ" class="footer-link">FAQ</a>
@@ -371,7 +371,7 @@
                             <a href="#privacypolicy" class="footer-link">Privacy Policy</a>
                         </li>
                         <li>
-                            <a href="#cooliesetting" class="footer-link">Cookie Settings</a>
+                            <a href="#cookiesetting" class="footer-link">Cookie Settings</a>
                         </li>
                     </ul>
                 </div>
